[project]
name = "huldra"
version = "0.1.0"
description = "Local-first arXiv metadata broker with shared cache, queue, and durable rate limiting."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "NeapolitanIcecream" }]
dependencies = [
    "fastapi>=0.115",
    "feedparser>=6.0.11",
    "httpx>=0.28",
    "loguru>=0.7",
    "orjson>=3.10",
    "platformdirs>=4.3",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "rich>=13.9",
    "typer>=0.15",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
huldra = "huldra.cli:app"

[dependency-groups]
dev = [
    "pyright>=1.1",
    "pytest>=8.3",
    "pytest-cov>=6",
    "respx>=0.22",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 110
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
